--- a/config.toml
+++ b/config.toml
@@ -10,10 +10,15 @@ theme = "github_dark"
 # theme = "onedark"
 
 [editor]
-bufferline = "multiple" # show opened buffers as tabs, when more than one exists.
+bufferline = "multiple"  # show opened buffers as tabs, when more than one exists.
 line-number = "relative" # To make relative line counts easier
 true-color = true
-color-modes = true  # Change color for helix modes (NOR, INS, SEL...)
+color-modes = true       # Change color for helix modes (NOR, INS, SEL...)
+cursorline = true        # Highlight the line the cursor is currently on
+
+[editor.lsp]
+auto-signature-help = false  # Prevent automatic signature popup
+display-inlay-hints = true
 
 [editor.indent-guides]
 render = true
@@ -33,9 +38,28 @@ wrap-indicator = ""  # set wrap-indicator to "" to hide it
 # Add the total line numbers of the file
 right = ["diagnostics", "selections", "register", "position", "total-line-numbers", "file-encoding"]
 
+
+##############################################################
+# Key bindings
+##############################################################
+
 # Create a new minor mode for IPython integration. Works in tmux session only. Launch with +.
 [keys.normal."+"]
 # Open a tmux split on the right and launch a Jupyter console
-i = ":sh tmux split-window -h -l 40%% -c \"#{pane_current_path}\" -d jupyter console --kernel=python -f=\"/tmp/hepl-$PPID.json\" --ZMQTerminalInteractiveShell.include_other_output=True --ZMQTerminalInteractiveShell.other_output_prefix='' > /dev/null"
-# Send selection to Jupyter console
+i = ":sh tmux split-window -h -l 50%% -c \"#{pane_current_path}\" -d jupyter console --kernel=python -f=\"/tmp/hepl-$PPID.json\" --ZMQTerminalInteractiveShell.include_other_output=True --ZMQTerminalInteractiveShell.other_output_prefix='' > /dev/null"
+# Send selection to Jupyter console with Return key
 "ret" = ":pipe-to jupyter run --existing=\"/tmp/hepl-$PPID.json\">/dev/null"
+
+[keys.insert]
+C-space = "signature_help"  # Show signature popup. Close it with ctrl+c
+j = { k = "normal_mode"}  # Use jk as Esc
+
+[keys.normal]
+# Fast moves with 2-letter position highlights (faster than using gw)
+"ret" = "goto_word"
+# Move lines up and down:
+"A-j" = ["extend_to_line_bounds", "delete_selection", "paste_after"]
+"A-k" = ["extend_to_line_bounds", "delete_selection", "move_line_up", "paste_before"]
+
+[keys.normal."space"]
+o = "file_picker_in_current_buffer_directory"
