--- a/config.toml
+++ b/config.toml
@@ -42,15 +42,9 @@ wrap-indicator = ""  # set wrap-indicator to "" to hide it
 
 [editor.statusline]
 # Add the git branch on the left part
-left = ["mode", "spinner", "version-control", "read-only-indicator", "file-modification-indicator"]
-# Make mode more explicit
-mode.normal = "NORMAL"
-mode.select = "SELECT"
-mode.insert = "INSERT"
-# Add file name on center (rather than left)
-center = ["file-name"]
-# Add the relative position and file type on the right part
-right = ["diagnostics", "selections", "register", "position", "position-percentage", "file-encoding", "file-type"]
+left = ["mode", "spinner", "version-control", "file-name", "read-only-indicator", "file-modification-indicator"]
+# Add the relative position on the right part, remove selections
+right = ["diagnostics", "register", "position", "position-percentage", "file-encoding"]
 
 
 ##############################################################
