--- a/config.toml
+++ b/config.toml
@@ -17,6 +17,10 @@ color-modes = true       # Change color for helix modes (NOR, INS, SEL...)
 cursorline = true        # Highlight the line the cursor is currently on
 # Minimum severity to show a diagnostic after the end of a line
 end-of-line-diagnostics = "hint"  # On test
+# Trim whitespace preceding line endings on write (default false)
+trim-trailing-whitespace = true
+# Trim extra line endings after the final one on write (default false)
+trim-final-newlines = true
 
 [editor.inline-diagnostics]
 cursor-line = "error"   # Show inline diagnostics when the cursor is on the line
