--- a/languages.toml
+++ b/languages.toml
@@ -1,56 +1,22 @@
-[language-server.pylsp.config.pylsp]
-plugins.ruff.enabled = false # Makes everything slow if true
-
+# Completes defaults in https://github.com/helix-editor/helix/blob/master/languages.toml
 [[language]]
 name = "python"
-auto-format = true # ":toggle-option autoformat" to disable
+language-servers = ["ty", "ruff"]
+auto-format = true                # ":toggle-option autoformat" to disable
 # Requires ruff, that can be installed with pipx
 formatter = { command = "sh", args = ["-c", """
   ruff check --select I --fix - | ruff format -
   """] }
 
 [[language]]
-name = "fortran"
-file-types = ["f", "for", "f90", "f95", "f03", "F", "F90", "F95", "F03"]
-
-
-[[language]]
-name = "html"
-scope = "text.html.basic"
-injection-regex = "html"
-file-types = [
-  "html",
-  "htm",
-  "shtml",
-  "xhtml",
-  "xht",
-  "jsp",
-  "asp",
-  "aspx",
-  "jshtm",
-  "volt",
-  "rhtml",
-  "cshtml",
-]
-block-comment-tokens = { start = "<!--", end = "-->" }
-language-servers = ["vscode-html-language-server", "superhtml"]
-auto-format = true
-indent = { tab-width = 2, unit = "  " }
-
-[language.auto-pairs]
-'(' = ')'
-'{' = '}'
-'[' = ']'
-'"' = '"'
-"'" = "'"
-"<" = ">"
-
-[[grammar]]
-name = "html"
-source = { git = "https://github.com/tree-sitter/tree-sitter-html", rev = "cbb91a0ff3621245e890d1c50cc811bffb77a26b" }
-
-
-[[language]]
 name = "toml"
+# Requires taplo
 formatter = { command = "taplo", args = ["format", "-"] }
+auto-format = true
+
+[[language]]
+name = "bash"
+indent = { tab-width = 4, unit = "  " }
+# Requires shfmt
+formatter = { command = "shfmt", args = ["-i", "4"] }
 auto-format = true
